3 files modified, 9 added, 8 deleted

--- a/src/app/student/student-add.component.html
+++ b/src/app/student/student-add.component.html
@@ -1,5 +1,5 @@
 
-<form [formGroup]="employeeForm">
+<form [formGroup]="studentForm">
   <div class="form-group">
       <input 
           type="text" 
@@ -14,7 +14,7 @@
           class="form-control w-100" 
           formControlName="id" 
           name="id" 
-          placeholder="Employee ID"
+          placeholder="Student ID"
           [readOnly]="isEdit">
   </div>
   <div class="form-group">
