--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<a [routerLink]="['employee-add']">Add</a>
-<a [routerLink]="['employees']">View All</a>
+<a [routerLink]="['student-add']">Add</a>
+<a [routerLink]="['students']">View All</a>
 <router-outlet></router-outlet>
