2 files modified, 8 added, 8 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<a [routerLink]="['student-add']">Add</a>
-<a [routerLink]="['students']">View All</a>
+<h2> Employee Management System</h2>
+<tr><a [routerLink]="['employee-add']">Add</a></tr>
+<br><br>
+<tr><a [routerLink]="['employees']">View All</a></tr>
 <router-outlet></router-outlet>
