--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<h2> Employee Management System</h2>
+<table allign="center">
+<h2> Employee Management System</h2></table>
 <tr><a [routerLink]="['employee-add']">Add</a></tr>
 <br><br>
 <tr><a [routerLink]="['employees']">View All</a></tr>
-<router-outlet></router-outlet>
+<router-outlet> </router-outlet>
